Fix: Hide horizontal scrollbars

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body
-    class="bg-pfxgsl-50 text-pfxl-text dark:bg-pfxgsd-800 dark:text-pfxd-text"
+    class="overflow-x-hidden bg-pfxgsl-50 text-pfxl-text dark:bg-pfxgsd-800 dark:text-pfxd-text"
   >
     <div id="app"></div>
     <script type="module" src="/src/main.tsx"></script>
